<resources>
    <!-- UI Text -->
    <string name="app_name">Elevate</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="skill_survey">Skill Level Survey</string>
    <string name="climbing_plan">Climbing Plan</string>
    <string name="near_me">Climbing Near Me</string>
    <string name="my_progress">My Progress</string>
    <string name="workout">Workout</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_login">Login</string>
    <string name="button_settings">Settings</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_next">Next</string>
    <string name="button_submit_survey">Submit</string>
    <string name="button_complete_workout">Mark As Complete</string>
    <string name="button_incomplete_workout">Mark As Incomplete</string>
    <string name="button_tutorial">Watch Tutorial</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter username</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password_confirm_hint">Re-enter password</string>
    <string name="welcome_returning_user">Welcome back to Elevate!</string>
    <string name="welcome_new_user">Welcome to Elevate!</string>
    <string name="button_skills_survey">Skill Level Survey</string>
    <string name="button_climbing_plan">My Climbing Plan</string>
    <string name="button_near_me">Climbing Near me</string>
    <string name="button_progress">My Progress</string>
    <string name="skill_level">Current Skill Level</string>
    <string name="goal_level">Goal Skill Level</string>
    <string name="account">Account</string>
    <string name="new_account">New Account</string>
    <string name="user_account">Account Information</string>
    <string name="question_one">What grade range do you usually climb around?</string>
    <string name="question_two">Are you better at power climbing or technique climbing?</string>
    <string name="question_three">What grade range is your goal grade range?</string>
    <string name="beginner">V0-V2</string>
    <string name="intermediate">V3-V5</string>
    <string name="advanced">V6-V9</string>
    <string name="elite">V10-V12</string>
    <string name="professional">V13-V17</string>
    <string name="power">Power</string>
    <string name="Technique">Technique</string>
    <string name="name">Name</string>
    <string name="style">Style</string>
    <string name="grade">Grade</string>
    <string name="tutorial">Tutorial</string>
    <string name="description">Description</string>
    <string name="button_new_workout">New Workout</string>
    <string name="button_create_workout">Create Workout</string>
    <string name="button_delete_workouts">Delete Workout</string>
    <string name="button_update_workout">Update Workout</string>
    <string name="map_search_hint">Enter Address, City, or Zip Code</string>
    <string name="climbing_plan_hint_need_skill">Complete the Skill Level Survey to view suggested workouts for your skill level.</string>
    <string name="climbing_plan_hint_all_done">You\'ve completed all of the recommended workouts! Update your skill level in the Skill Level Survey to see more workouts.</string>
    <string name="progress_hint">You haven\'t completed any workouts yet.</string>
    <string name="internet_hint">No internet connection.</string>

    <!-- Dialog Text -->
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="login_error_text">Login failed.</string>
    <string name="passwords_match_error_text">Passwords do not match.</string>
    <string name="no_net_text">Cannot complete action: No network connectivity.</string>
    <string name="ok_text">OK</string>
    <string name="try_again_text">Try Again</string>
    <string name="delete_account_confirm">Are you sure you want to delete your account?</string>
    <string name="cancel">Cancel</string>
</resources>