<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/submit_survey_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_submit_survey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question_three_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:maxLines="2"
        android:scrollHorizontally="false"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000"
        android:text="@string/question_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/answer_three_radiogroup"
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_three_textview" >

        <RadioButton
            android:id="@+id/beginner_radiobutton_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beginner" />

        <RadioButton
            android:id="@+id/intermediate_radiobutton_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intermediate" />

        <RadioButton
            android:id="@+id/advanced_radiobutton_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advanced" />

        <RadioButton
            android:id="@+id/elite_radiobutton_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elite" />

        <RadioButton
            android:id="@+id/professional_radiobutton_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professional" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>