<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/settings_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/near_me_button" />

    <TextView
        android:id="@+id/skill_level_textview"
        android:layout_width="292dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:text="@string/skill_level"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goal_skill_level_textview"
        android:layout_width="292dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:text="@string/goal_level"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_level_textview" />

    <Button
        android:id="@+id/survey_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_skills_survey"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/near_me_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/climbing_plan_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_climbing_plan"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/progress_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/near_me_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="200dp"
        android:text="@string/button_near_me"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/progress_button"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="200dp"
        android:text="@string/button_progress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>