<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="525dp"
        android:text="@string/button_sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_out_button" />

    <TextView
        android:id="@+id/account_textview"
        android:layout_width="292dp"
        android:layout_height="41dp"
        android:layout_marginTop="100dp"
        android:text="@string/user_account"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/account_textview"
        app:layout_constraintTop_toBottomOf="@+id/account_textview" />

    <TextView
        android:id="@+id/current_level_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/skill_level"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/username_account_textview"
        app:layout_constraintTop_toBottomOf="@+id/username_account_textview" />

    <TextView
        android:id="@+id/goal_level_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/goal_level"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/current_level_textview"
        app:layout_constraintTop_toBottomOf="@+id/current_level_textview" />

    <TextView
        android:id="@+id/username_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        app:layout_constraintStart_toEndOf="@+id/username_account_textview"
        app:layout_constraintTop_toTopOf="@+id/username_account_textview" />

    <TextView
        android:id="@+id/current_skill_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/skill_level"
        app:layout_constraintStart_toEndOf="@+id/current_level_textview"
        app:layout_constraintTop_toTopOf="@+id/current_level_textview" />

    <TextView
        android:id="@+id/goal_skill_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/goal_level"
        app:layout_constraintStart_toEndOf="@+id/goal_level_textview"
        app:layout_constraintTop_toTopOf="@+id/goal_level_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>