<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/complete_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="525dp"
        android:text="@string/button_complete_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_display_textview"
        android:layout_width="292dp"
        android:layout_height="41dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/style_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:text="@string/style"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_display_textview" />

    <TextView
        android:id="@+id/grade_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:text="@string/grade"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/style_textview" />

    <TextView
        android:id="@+id/tutorial_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="30dp"
        android:text="@string/tutorial"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_textview" />

    <TextView
        android:id="@+id/style_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/style"
        app:layout_constraintStart_toEndOf="@+id/style_textview"
        app:layout_constraintTop_toTopOf="@+id/style_textview" />

    <TextView
        android:id="@+id/grade_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/grade"
        app:layout_constraintStart_toEndOf="@+id/grade_textview"
        app:layout_constraintTop_toTopOf="@+id/grade_textview" />

    <TextView
        android:id="@+id/tutorial_display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tutorial"
        app:layout_constraintStart_toEndOf="@+id/tutorial_textview"
        app:layout_constraintTop_toTopOf="@+id/tutorial_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>