<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="100dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/style_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:text="@string/style"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edittext" />

    <TextView
        android:id="@+id/grade_textview"
        android:layout_width="35dp"
        android:layout_height="22dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:text="@string/grade"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/style_edittext" />

    <TextView
        android:id="@+id/tutorial_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:text="@string/tutorial"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade_edittext" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/name_textview"
        app:layout_constraintTop_toBottomOf="@+id/name_textview" />

    <EditText
        android:id="@+id/style_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/style"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/style_textview"
        app:layout_constraintTop_toBottomOf="@+id/style_textview" />

    <EditText
        android:id="@+id/grade_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/grade"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/grade_textview"
        app:layout_constraintTop_toBottomOf="@+id/grade_textview" />

    <EditText
        android:id="@+id/tutorial_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tutorial"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/tutorial_textview"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_textview" />

    <Button
        android:id="@+id/create_workout_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/button_create_workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>